<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="days">Days to keep:</string>
	<string name="app_name">Purge Strikes Back</string>
	<string name="do_it">Purge!</string>
	<string name="close">Close</string>
	<string name="call_log">Purge call logs</string>
	<string name="sms">Purge SMS</string>
	<string name="locked_sms">Also purge locked SMS</string>
	<string name="confirm_locked">Are you sure to purge locked SMS, too? They may be locked because you DO want to keep them.</string>
	<string name="ok">Sure</string>
	<string name="cancel">No!</string>
	<string name="nothing">Nothing to purge!</string>
	<string name="call_deleted" formatted="false">%d call log(s) purged.</string>
	<string name="sms_deleted" formatted="false">%d SMS purged.</string>
	<string name="both_deleted" formatted="false">%d call log(s) and %d SMS purged.</string>
	<string name="tab_once">Purge</string>
	<string name="tab_auto">Auto Purge</string>
	<string name="set_auto">Set</string>
	<string name="unset_auto">Disable</string>
	<string name="auto_status" formatted="false">Status: %s.</string>
	<string name="auto_status_set">auto purge at every midnight (00:05)</string>
	<string name="auto_status_unset">auto purge disabled</string>
</resources>
