<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/layout_once"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1"
		>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:padding="5dp">
				<LinearLayout
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:padding="5dp">
					<TextView  
						android:layout_width="wrap_content" 
						android:layout_height="wrap_content" 
						android:text="@string/days"
						android:paddingRight="5dp"
						/>
					<EditText
						android:id="@+id/days"
						android:text="30"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:numeric="integer"
						/>
				</LinearLayout>
				<View
					android:layout_width="fill_parent"
					android:layout_height="1dp"
					android:background="@drawable/divider_horizontal_dark"
					/>
			</LinearLayout>
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:padding="5dp">
				<CheckBox
					android:id="@+id/call_log"
					android:text="@string/call_log"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:paddingTop="5dp"
					android:paddingBottom="5dp"
					android:checked="true"
					/>
				<View
					android:layout_width="fill_parent"
					android:layout_height="1dp"
					android:background="@drawable/divider_horizontal_dark"
					/>
			</LinearLayout>
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:padding="5dp">
				<CheckBox
					android:id="@+id/sms"
					android:text="@string/sms"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:paddingTop="5dp"
					android:checked="true"
					/>
				<LinearLayout
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal">
					<View
						android:layout_width="30dp"
						android:layout_height="fill_parent"
						/>
					<CheckBox
						android:id="@+id/mms"
						android:text="@string/mms"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:checked="false"
						/>
				</LinearLayout>
				<LinearLayout
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal">
					<View
						android:layout_width="30dp"
						android:layout_height="fill_parent"
						/>
					<CheckBox
						android:id="@+id/locked_sms"
						android:text="@string/locked_sms"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:checked="false"
						/>
				</LinearLayout>
				<View
					android:layout_width="fill_parent"
					android:layout_height="1dp"
					android:background="@drawable/divider_horizontal_dark"
					/>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>

	<LinearLayout
		android:padding="5dp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center">
		<Button
			android:id="@+id/do_it"
			android:text="@string/do_it"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="0.5"
			/>
		<Button
			android:text="@string/close"
			android:id="@+id/close"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="0.5"
			/>
	</LinearLayout>

</LinearLayout>
